feat: ai-service 유저 히스토리 관련 로직 추가 및 운영 환경 설정